<?xml version="1.0"?>
<package format="2">
  <name>multirobot_interference</name>
  <version>1.0.0</version>
  <description>The multirobot_interference package</description>

  <maintainer email="marcandavi@gmail.com">Davide Marcantoni</maintainer>
  <license>MIT</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>argparse</exec_depend>
  <exec_depend>yaml</exec_depend>
  <exec_depend>subprocess</exec_depend>
  <exec_depend>signal</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>webcolors</exec_depend>
  <exec_depend>random</exec_depend>
  <exec_depend>networkx</exec_depend>
  <exec_depend>termcolor</exec_depend>
  <exec_depend>threading</exec_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
